<resources>
    <string name="app_name" translatable="false">PalacePetz</string>
    <string name="loading">Loading…</string>
    <string name="one" translatable="false">1</string>
    <string name="filter_animals">Filter animals</string>
    <string name="dogs">Dogs</string>
    <string name="cats">Cats</string>
    <string name="hamster" translatable="false">Hamster</string>
    <string name="birds">Birds</string>
    <string name="consultations">Consultation</string>
    <string name="weHaveAProblem">We have a problem with our server.\nTry again later</string>
    <string name="select_payment_method">Select a payment method.</string>
    <string name="ok" translatable="false">OK</string>
    <string name="weve_sent_youanEmail_password">We\'ve sent you an email so you can change your password.</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sing_in">Sing in</string>
    <string name="forgot_your_password_recover">Forgot your password?</string>
    <string name="sing_up"><u>Sing up</u></string>
    <string name="remember_me">Remember me</string>
    <string name="create_account">Create Account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="minimum_eight_characters">Minimum 8 characters</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="haveAccount_signIn">Already have an account? <b>Sign in.</b></string>
    <string name="necessary_to_insert_the_last_name">Necessary to insert the last name</string>
    <string name="necessary_to_insert_the_First_name">Necessary to insert the first name</string>
    <string name="email_required">Email, cpf or username is required</string>
    <string name="informed_email_is_invalid">Informed email is invalid</string>
    <string name="password_required">Password required</string>
    <string name="password_cannot_contain_spaces">Password cannot contain spaces</string>
    <string name="password_needs">Your password needs at least 8 characters, 1 letter, 1 number and a special character</string>
    <string name="forgot_the_password">FORGOT PASSWORD?</string>
    <string name="authFailed_thisEmail">Authentication failed!\nThis email is already registered.</string>
    <string name="hello_emailSend">Hello, your user has been successfully registered :)\nWe sent a verification email to the registered email, please confirm in the email before logging in.</string>
    <string name="ok_i_will_confirm">OK, I will confirm</string>
    <string name="txt_weVerify_email_not_verified">We verify that your email has not been confirmed, please confirm your account with the email we sent you.</string>
    <string name="invalidEmailOrPassword">Invalid email or password.</string>
    <string name="next">Next </string>
    <string name="skip">Skip</string>
    <string name="pair_my_fountain">Pair my fountain</string>
    <string name="text_one_devicePresentation">The Palace Fountain is an equipment where you put the food and water for your pet you will have total control through our app.</string>
    <string name="bluetooth_enable_success">Bluetooth Enabled successfully</string>
    <string name="bluetooth_couldnt_success">Bluetooth couldn\'t be enabled</string>
    <string name="no_paired_device">No paired devices found, please pair your PalacePetz device and try again</string>
    <string name="connecting">Connecting</string>
    <string name="tips_pair_device">Pairing Tips</string>
    <string name="tip01">1 - Turn on your phone\'s bluetooth;</string>
    <string name="tip02">2 - Click on Palace_Fountain;</string>
    <string name="tip03">3 - Then click Connect;</string>
    <string name="tip04">4 - Then return here and click on continue.</string>
    <string name="tip05_connect">If you are unable to connect, please contact PalacePetz</string>
    <string name="txt_continue">Continue</string>
    <string name="could_connect_verify_device">Could not connect to device.\nPlease verify if your device is on.</string>
    <string name="noProblem_lets_help_you">NO PROBLEM,\nLET\'S HELP YOU.</string>
    <string name="change_password">Change Password</string>
    <string name="put_water">PUT WATER</string>
    <string name="put_racao">PLACE RATION</string>
    <string name="disconnect">DISCONNECT</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="really_want_logOut">Do you really want to log out?</string>
    <string name="logout">LogOut</string>
    <string name="historic">Historic</string>
    <string name="leave">Leave</string>
    <string name="personalname">Personal Name</string>
    <string name="emailexample" translatable="false">emailexample@gmail.com</string>
    <string name="cpfExample" translatable="false">000.000.000-00</string>
    <string name="cepexample" translatable="false">00000-000</string>
    <string name="address">Address</string>
    <string name="complement">Complement</string>
    <string name="editProfile">Edit Profile</string>
    <string name="gallery">Gallery</string>
    <string name="cancel">Cancel</string>
    <string name="select_upload_method">Select the upload method</string>
    <string name="change_profile_photo">Change profile photo</string>
    <string name="camera">Camera</string>
    <string name="cpf">CPF</string>
    <string name="cep">ZIPCODE</string>
    <string name="couldnt_insert">Couldn\'t insert your profile image</string>
    <string name="select_an_image">Select an image</string>
    <string name="uploadFailed">Upload failed please try again later</string>
    <string name="title_activity_register_address" translatable="false">Map</string>
    <string name="register_address">REGISTER ADDRESS</string>
    <string name="street">Street</string>
    <string name="number">Number</string>
    <string name="home" translatable="false">Home</string>
    <string name="palaceFountain">Palace Fountain</string>
    <string name="myOrders">My Orders</string>
    <string name="zipCode_is_invalid">ZipCode is invalid</string>
    <string name="error_in_get_your_address">Error in get your address</string>
    <string name="title_activity_maps" translatable="false">Map</string>
    <string name="your_address_updated_successfully">Your address has been updated successfully</string>
    <string name="zipcode_field_incorretly">Zip code field is incorrectly filled</string>
    <string name="street_field_incorretly">Street field is incorrectly filled</string>
    <string name="number_field_incorretly">Number field is incorrectly filled</string>
    <string name="phone">Phone</string>
    <string name="edit_address">Edit my Address</string>
    <string name="products">Products</string>
    <string name="lowest_price">LOWEST PRICE</string>
    <string name="biggest_price">BIGGEST PRICE</string>
    <string name="popular" translatable="false">Popular</string>
    <string name="less" translatable="false">-</string>
    <string name="plus" translatable="false">+</string>
    <string name="buyNow">Buy Now</string>
    <string name="product_name">Product Name</string>
    <string name="price">Price</string>
    <string name="cpfinformedisInvalid">The CPF informed is invalid</string>
    <string name="my_shopping_cart">My Shopping Cart</string>
    <string name="your_ShoppingCart_asEmpty">YOUR SHOPPING CART IS EMPTY.</string>
    <string name="see_products">SEE PRODUCTS</string>
    <string name="you_dont_haveAddressRegistered">YOU DON\'T HAVE YET A REGISTERED ADDRESS.</string>
    <string name="sign_up_now">SING UP NOW</string>
    <string name="sign_up_latter">REGISTER LATER</string>
    <string name="ex_shelfLife_card" translatable="false">XX/XX</string>
    <string name="ex_numberCard_card" translatable="false">•••• •••• •••• ••••</string>
    <string name="fulanodetal" translatable="false">Falano de Tal</string>
    <string name="myCards">My Cards</string>
    <string name="registered_cards">REGISTERED CARDS</string>
    <string name="no_card_registered">No card registered</string>
    <string name="add_card">Add Card</string>
    <string name="add_new_card">Add new Card</string>
    <string name="cardNumber">Card Number</string>
    <string name="expiration_date">Expiration date</string>
    <string name="cvv" translatable="false">CVV</string>
    <string name="name_printed_on_the_card">Name Printed on the card</string>
    <string name="no_flag_selected">The card`s flag was not requested</string>
    <string name="cardNumber_wrongInsert">Card number inserted incorrectly</string>
    <string name="shelfLife_incorrectly">Expiration date entered incorrectly</string>
    <string name="cvv_inserted_incorrectly">CVV inserted incorrectly</string>
    <string name="name_incorrectly_inserted">Name entered incorrectly</string>
    <string name="yours_cards">Your cards</string>
    <string name="remove_registred_card">Would you like to remove the registered card?</string>
    <string name="remove">Remove</string>
    <string name="card_not_found">Card not found</string>
    <string name="services">Services</string>
    <string name="choose_a_service">CHOOSE A SERVICE</string>
    <string name="veterinary_consultation">VETERINARY CONSULTATION</string>
    <string name="bath_and_tosa">BATH AND TOSA</string>
    <string name="schedule_consultation">SCHEDULE CONSULTATION</string>
    <string name="schedule_bath_and_tosa">SCHEDULE BATH AND TOSA</string>
    <string name="select_a_time">Select a time</string>
    <string name="select_a_date">Select a date</string>
    <string name="its_not_possible_scheduleYear">It is not possible to schedule an appointment in the given year.</string>
    <string name="its_not_possible_scheduleMonth">It is not possible to schedule an appointment in the given month.</string>
    <string name="its_not_possible_scheduleDay">It is not possible to schedule an appointment on the day informed.</string>
    <string name="sorryButPalaceWillBeCosed">Sorry, but at the selected time PalacePetz will be closed</string>
    <string name="description">Description…</string>
    <string name="to_schedule">TO SCHEDULE</string>
    <string name="select_your_pet">Select your pet.</string>
    <string name="select_a_veterinarian">Select a veterinarian.</string>
    <string name="WITHDRAWAL_DELIVERY">WITHDRAWAL / DELIVERY</string>
    <string name="optionOneDeliveryMethod">1 - I will take the Pet | Receive at the residence</string>
    <string name="optionTwoDeliveryMethod">2 - I will take the Pet | Withdraw in PetShop</string>
    <string name="optionThreeDeliveryMethod">3 - PetShop will fetch the animal | I will withdraw in the PetShop</string>
    <string name="optionFourDeliveryMethod">4 - PetShop will fetch the animal | Receive at the residence</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="one_is_the_minumum_quantity">1 is the minimum quantity</string>
    <string name="maximum_amount_reached">Maximum quantity reached, it is only possible to add in your cart 20 units of a product.</string>
    <string name="see_my_pets">See my pets</string>
    <string name="age">Age</string>
    <string name="weight">Weight</string>
    <string name="breed">Breed</string>
    <string name="species">Species</string>
    <string name="payment">Payment</string>
    <string name="order">Order</string>
    <string name="created_in">CREATED IN</string>
    <string name="status">Status</string>
    <string name="track_order">Track Order</string>
    <string name="editAnimal">Edit Animal</string>
    <string name="i_do_not_receive_discount_coupon">I do not receive discount coupon.</string>
    <string name="desc_do_not_receive_discount">Our coupons are shipped on holidays or on special occasions like by example in your first order.</string>
</resources>