<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_tips"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_device_presentation"
    tools:context=".Activitys.DeviceTipsActivity">

    <!-- Arrow Back -->
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/arrowGoBackDeviceTips"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_rawRes="@raw/arrow_back" />

    <!-- Title Palace Fountain -->
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35sp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/segoe_ui"
        android:text="@string/palaceFountain"
        android:textColor="@color/white"
        android:textSize="29sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/arrowGoBackDeviceTips" />

    <!-- Main Container -->
    <ScrollView
        android:id="@+id/scrollView_container_tips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent">

        <!-- Container -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_tips_device"
            android:minHeight="450dp"
            android:padding="25dp"
            app:layout_constraintBottom_toBottomOf="parent">

            <!-- Pairing Tips -->
            <TextView
                android:id="@+id/txt_paringTips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/segoe_ui"
                android:text="@string/tips_pair_device"
                android:textColor="@color/white"
                android:textSize="23sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- Tip 01 -->
            <TextView
                android:id="@+id/txt_tip01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/tip01"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_paringTips" />

            <!-- Tip 02 -->
            <TextView
                android:id="@+id/txt_tip02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/tip02"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_tip01" />

            <!-- Tip 03 -->
            <TextView
                android:id="@+id/txt_tip03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/tip03"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_tip02" />

            <!-- Tip 04 -->
            <TextView
                android:id="@+id/txt_tip04"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/tip04"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_tip03" />

            <!-- Tip 05 -->
            <TextView
                android:id="@+id/txt_tip05"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/tip05_connect"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_tip04" />

            <!-- Continue Btn -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/btnContinue_Tips"
                android:layout_width="300dp"
                android:layout_height="64dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/card_continue_tips"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_tip05">

                <!-- Text Continue -->
                <TextView
                    android:id="@+id/txt_ContinueTips"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/segoe_ui_bold"
                    android:text="@string/txt_continue"
                    android:textColor="#F5FBFF"
                    android:textSize="30sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>