<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <!-- Main Container -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="300dp"
        android:minHeight="290dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/background_adapter_pets"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="20dp">

        <!-- Pet Image -->
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_pet_adapter"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:src="@drawable/default_profile_image"
            android:visibility="visible"
            app:civ_border_color="@color/black"
            app:civ_border_width="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Text Pet Name -->
        <TextView
            android:id="@+id/txt_petName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/segoe_ui"
            android:textSize="19sp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_pet_adapter" />

        <!-- Text Pet Age -->
        <TextView
            android:id="@+id/petAge_adapter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age"
            android:textColor="@color/black"
            android:fontFamily="@font/segoe_ui"
            android:textSize="17sp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_petName" />

        <!-- Text Pet Weight -->
        <TextView
            android:id="@+id/petWeight_adapter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight"
            android:textColor="@color/black"
            android:fontFamily="@font/segoe_ui"
            android:textSize="17sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/petAge_adapter" />

        <!-- Text Pet Species -->
        <TextView
            android:id="@+id/petSpecies_adapter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/species"
            android:textColor="@color/black"
            android:fontFamily="@font/segoe_ui"
            android:textSize="17sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/petWeight_adapter" />

        <!-- Text Pet Breed -->
        <TextView
            android:id="@+id/petBreed_adapter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/breed"
            android:textColor="@color/black"
            android:fontFamily="@font/segoe_ui"
            android:textSize="17sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/petSpecies_adapter" />

        <!-- Card Edit Pet -->
        <androidx.cardview.widget.CardView
            android:id="@+id/cardBtn_EditPet"
            android:layout_width="215dp"
            android:layout_height="44dp"
            android:layout_marginTop="20sp"
            app:cardBackgroundColor="@color/cards_background"
            app:cardCornerRadius="20dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/petBreed_adapter">

            <!-- Container  -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <!-- Text Edit -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/segoe_ui_bold"
                    android:text="@string/editAnimal"
                    android:textColor="#F5FBFF"
                    android:textSize="20sp"
                    android:layout_marginBottom="2dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>