<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sheet_menu_receive_base_descriptions_help"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:layout_gravity="center"
    android:background="@drawable/bg_sheet_menu_help">

    <!-- Header -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent"
        android:layout_marginTop="15dp">

        <!-- Title -->
        <TextView
            android:id="@+id/txt_title_desc_base_help_sheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/i_do_not_receive_discount_coupon"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:fontFamily="@font/segoe_ui_bold"/>

    </LinearLayout>

    <!-- Container Desc -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp">

        <!-- Text Description -->
        <TextView
            android:id="@+id/txt_desc_base_help_sheet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            android:text="@string/desc_do_not_receive_discount"/>

    </LinearLayout>

    <!-- Btn OK -->
    <LinearLayout
        android:id="@+id/btn_ok_sheet_base_description_help"
        android:layout_width="121dp"
        android:layout_height="65dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:background="@drawable/background_continue_intro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <!-- Text OK -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:fontFamily="@font/segoe_ui_bold"
            android:text="@string/ok"/>

    </LinearLayout>

</LinearLayout>